doc fix, token fix, new rout in docs
